--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <p class="desc">To be a part of company that indulges professional growth which provides challenging and rewarding career while allowing me to utilize my knowledge and skills.</p>
             </div>
             <div class="p-0 pt-5">
-                <a href="#" class="btn btn-lg active" role="button" aria-pressed="true">Talk's <span class="span-name">To me</span></a>
+                <a href="#" class="btn btn-lg active" role="button" aria-pressed="true">Talk's To me</a>
             </div>      
             <img class="img-frame float-right" src="assets/img/Frame 13.png" alt="img frame">
         </header>
@@ -59,21 +59,37 @@
                 <h2 class="title text-center">About <span class="span-name">me</span></h2>
                 <div class="card-about d-flex align-items-center justify-content-around flex-lg-wrap w-100">
                   <div class="card_box" style="width: 18rem;">
-                    <div class="card-body card_body">
+                    <div class="card-body card_body d-flex flex-column justify-content-center text-center align-items-center">
                       <img src="assets/img/Group 13.svg" alt="profile">
                       <h5 class="card-title">PROFILE</h5>
+                      <div class="content">
+                        <p class="paraf-cont">Saya lahir 01 Maret 1997
+                          Desa.Manis Kidul Kec.Jalaksana 
+                          Kab.Kuningan
+                          Provinsi.Jawa Barat</p>
+                      </div>
                     </div>
                   </div>
                   <div class="card_box" style="width: 18rem;">
-                    <div class="card-body card_body">
+                    <div class="card-body card_body d-flex flex-column justify-content-center text-center align-items-center">
                       <img src="assets/img/Group 15.svg" alt="">
                       <h5 class="card-title">EDUCATION</h5>
+                      <div class="content">
+                        <p class="paraf-cont">University
+                          Insan Pembangunan Indonesia
+                          2019-2022
+                        </p>
+                      </div>
                     </div>
                   </div>
                   <div class="card_box" style="width: 18rem;">
-                    <div class="card-body card_body">
+                    <div class="card-body card_body d-flex flex-column justify-content-center text-center align-items-center">
                       <img src="assets/img/Group 14.svg" alt="">
                       <h5 class="card-title">HOBBIES</h5>
+                      <div class="content">
+                        <p class="paraf-cont">Music, Games, Darwing,
+                          Web devllopment/Design & Adventure</p>
+                      </div>
                     </div>
                   </div>
                 </div>
